--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,17 +20,17 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
-        python {
-            buildPython "C:/Users/warm/AppData/Local/Programs/Python/Python311/python.exe"
-            pyc{
-                src false
-            }
-            pip{
-                install "opencv-python"
-                install "numpy"
-                install "requests"
-            }
-        }
+//        python {
+//            buildPython "C:/Users/warm/AppData/Local/Programs/Python/Python311/python.exe"
+//            pyc{
+//                src false
+//            }
+//            pip{
+//                install "opencv-python"
+//                install "numpy"
+//                install "requests"
+//            }
+//        }
     }
 
     buildTypes {
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
